# webcam-image-processor

./: Cargo.toml  README.md
src/: image.rs  main.rs  pixel_traits.rs
