[package]
name = "webcam_image_processor"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel_engine = "0.8.0"
fastrand = "1.8.0"
camera_capture = "0.5.0"
lerp = "0.4.0"
png = "0.17.7"

[profile.release]
lto = true
opt-level = 3
