[package]
name = "webcam_image_processor"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel_engine = "0.8.0"
fastrand = "1.8.0"
camera_capture = "0.5.0"
lerp = "0.4.0"
png = "0.17.7"


#cdgu1  1min 2sec   3.5mb
#lto    1min 15sec  2.9mb

[profile.release]
#codegen-units = 1
#lto = true
#strip = true
opt-level = "z"
